--- a/src/styles.css
+++ b/src/styles.css
@@ -45,8 +45,8 @@ select {
 }
 
 .tour-header {
-    display: flex
-    justify-content: space-between;
-    align-items: center;
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
 }
 
